# FTB-Translator

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: architecture.md  cmp-format.md  current-baseline.md  logging.md  release-checklist.md  testing-strategy.md  translation-accuracy-audit.md  translation-pipeline.md  writeback-transaction.md
docs/decisions/: 001-token-span-over-regex.md  (+4 more)
ftb_translater/: __init__.py  app.py  backup.py  cache.py  chapters.py  config.py  credential_store.py  deepl_client.py  deepseek_client.py  format_guard.py  history_db.py  logger.py  paths.py  providers.py  report.py  snbt.py  translator.py  user_paths.py  web_translation_clients.py
scripts/: check-versions.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: minecraft_glossary.json
src-tauri/src/: atomic_file.rs  chapters.rs  cmp.rs  commands.rs  core.rs  error.rs  glossary.rs  lib.rs  logging.rs  main.rs  protocol.rs  providers.rs  rich_text.rs  snbt.rs  storage.rs  task_state.rs
src-tauri/src/core/: protection.rs  review.rs  scan.rs  translation.rs  writeback.rs
src-tauri/tests/: golden_fixtures.rs
src-tauri/tests/fixtures/: README.md
src-tauri/tests/fixtures/chapters-nested/: expected-extraction.json  expected.cmp  mock-translations.json
src-tauri/tests/fixtures/chapters-nested/expected/config/ftbquests/quests/chapters/: alpha.snbt  beta.snbt
src-tauri/tests/fixtures/chapters-nested/input/config/ftbquests/quests/chapters/: alpha.snbt  beta.snbt
src-tauri/tests/fixtures/lang-rich/: expected-extraction.json  expected.cmp  mock-translations.json
src-tauri/tests/fixtures/lang-rich/expected/config/ftbquests/quests/lang/: zh_cn.snbt
src-tauri/tests/fixtures/lang-rich/input/config/ftbquests/quests/lang/: en_us.snbt
src-tauri/tests/fixtures/multi-file-rollback/input/: first.snbt
tests/: run_groups.py  test_core.py  test_credential_store.py  test_history_db.py  test_live_curseforge.py  test_live_deepseek_e2e.py  test_providers.py
(+26 files in other folders)
