[project]
name = "ftb-translater"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ftb-translater = "ftb_translater.app:main"
ftb-test = "tests.run_groups:main"
ftb-test-e2e = "tests.run_groups:main"
