[package]
name = "ftb-translater"
version = "0.2.0"
description = "FTB Quests translation workbench"
authors = ["FTB Translater contributors"]
edition = "2021"

[lib]
name = "ftb_translater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
